# momento-v1

./: .env.example  DESIGN.md  README.md  main.py  pyproject.toml  quickstart.sh
examples/: basic_usage.py
infra/: docker-compose.yaml
src/momento_memory/: __init__.py  embeddings.py  memory.py  models.py  server.py  utils.py
